--- a/index.html
+++ b/index.html
@@ -8,12 +8,74 @@
 
   <link rel="stylesheet" href="css/index.css">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header id="home">
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#projects">Pojects</a>
+        <a href="#photos">Photos</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+    <div class="main-box">
+      <img class= "profile" src="img/main.jpg" alt="photo of self"/>
+      <div class="intro">
+      <h1>Jose Paquian - Web Dev - Photographer</h1>
+        <p>I love working with technology and I do photography as a hobby.</p>
+        <br>
+        <p>Currently working, being a student and doing photograpy, but may have sometime to freelance. Let me know what I can do for you.</p>
+        <button id="contact-BT">Get In Touch</button></h1>
+      </div>
+    </div>
+    <div class="two-box">
+      <div class="first">
+        <h1>A Little About Me</h1>
+        <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
+      </div>
+      <div class="second">
+        <h1>Skills</h1>
+        <ul>
+          <li>Building a computer</li>
+          <li>Taking portait and landscape photos</li>
+          <li>Driving</li>
+          <li>walking everywhere</li>
+          <li>Learning</li>
+        </ul>
+      </div>
+    </div>
+    <div class="history">
+      <h1 class="his-title">Work History</h1>
+      <table>
+        <colgroup span="4"></colgroup>
+      <tr>
+        <th>Years</th>
+        <th>Company</th>
+        <th>Title</th>
+        <th>Tech Used</th>
+      </tr>
+      <tr>
+        <td>1.5</td>
+        <td>This Place</td>
+        <td>Doing this</td>
+        <td>using this</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>That Place</td>
+        <td>Doing That</td>
+        <td>Using that</td>
+      </tr>
+      </table>
+    </div>
+  </div>
+  
 </body>
 </html>
